--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,14 +28,24 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - name: Deploy to server
-      id: deploy
-      uses: Pendect/action-rsyncer@v1.1.0
-      env:
-        DEPLOY_KEY: ${{secrets.SSH_KEY}}
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
       with:
-        flags: '-avzr --delete'
-        options: ''
-        ssh_options: ''
-        src: 'dist/'
-        dest: 'angular@173.249.36.5:/home/angular/dist'
+        host: 173.249.36.58
+        username: angular
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        script: |
+          rm -rf /home/angular/dist
+          mkdir /home/angular/dist
+    
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@master
+      with:
+        host: 173.249.36.58
+        username: angular
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        source: "dist/"
+        target: "/home/angular/dist"
+    
