--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,24 +28,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: 173.249.36.58
-        username: angular
-        key: ${{ secrets.SSH_KEY }}
-        port: 22
-        script: |
-          rm -rf /home/angular/dist
-          mkdir /home/angular/dist
-    
-    - name: copy file via ssh password
-      uses: appleboy/scp-action@master
-      with:
-        host: 173.249.36.58
-        username: angular
-        key: ${{ secrets.SSH_KEY }}
-        port: 22
-        source: "dist/"
-        target: "/home/angular/dist"
-    
+    - run: mkdir ~/.ssh
+    - run: 'echo "$SSH_KEY" >> ~/.ssh/github-action'
+    - run: chmod 400 ~/.ssh/github-action
+    - run: echo -e "Host static\n\tUser angular\n\tHostname 173.249.36.58\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No" >> ~/.ssh/config
+    - run: ssh static "rm -rf ~/dist"
+    - run: rsync -e ssh dist static:~/dist
