--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,6 +18,8 @@ jobs:
       matrix:
         node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    env:
+      SSH_KEY: ${{secrets.SSH_KEY}}
 
     steps:
     - uses: actions/checkout@v2
