--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,4 +37,5 @@ jobs:
     - run: chmod 400 ~/.ssh/github-action
     - run: echo -e "Host static\n\tUser angular\n\tHostname 173.249.36.58\n\tIdentityFile ~/.ssh/github-action\n\tStrictHostKeyChecking No" >> ~/.ssh/config
     - run: ssh static "rm -rf ~/dist && mkdir ~/dist"
-    - run: rsync -e ssh dist/ static:~/dist
+    - run: ls dist
+    - run: rsync -e ssh dist static:/home/angular/dist
